# consulting_agents

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md
backend/: .env.example  README.md  agent.md  alembic.ini  mypy.ini  pyproject.toml  ruff.toml
backend/alembic/: agent.md  env.py
backend/alembic/versions/: 0001_baseline.py  0002_users_and_settings.py  0003_provider_keys.py  0004_task_catalog.py  0005_documents_and_chunks.py  0006_runs_events_and_evidence.py  0007_enable_ma_task.py  0008_enable_profitability.py  0009_enable_pricing.py  0010_run_lifecycle_columns.py
backend/app/: agent.md  main.py
backend/app/agents/: __init__.py  agent.md  budget.py  llm.py  pricing.py
backend/app/agents/_engine/: __init__.py  edges.py  graph.py  paths.py  profile.py  recovery.py  registry.py  skills.py  state.py
backend/app/agents/ma/: __init__.py  graph.py  runner.py  state.py
backend/app/agents/market_entry/: __init__.py  edges.py  graph.py  profile.py  state.py
backend/app/agents/pricing/: __init__.py  profile.py  runner.py
backend/app/agents/profitability/: __init__.py  profile.py  runner.py
backend/app/agents/tools/: __init__.py  agent.md  cite.py  fetch_url.py  rag_search.py  read_doc.py  web_search.py  write_artifact.py
backend/app/api/: agent.md  documents.py  health.py  ping.py  runs.py  settings.py  tasks.py
backend/app/core/: agent.md  config.py  crypto.py  db.py  events.py  sse.py  task_registry.py
backend/app/ingestion/: agent.md  chunker.py  docling_parser.py  embedder.py  worker.py
backend/app/models/: __init__.py  agent.md  artifact.py  chunk.py  document.py  event.py  evidence.py  gate.py  message.py  provider_key.py  run.py  settings_kv.py  task_type.py  user.py
backend/app/schemas/: agent.md  documents.py  framing.py  ping.py  reviewer.py  runs.py  settings.py  tasks.py
backend/app/services/: __init__.py  agent.md  document_service.py  run_service.py  settings_service.py
backend/app/skills/: agent.md
backend/app/skills/change-management/: SKILL.md
backend/app/testing/: __init__.py  fake_chat_model.py
backend/app/workers/: run_worker.py
backend/scripts/: __init__.py  backfill_stale_runs.py
backend/tests/: test_health.py
backend/tests/fixtures/: README.md  exa_response.json  perplexity_response.json  tavily_response.json
backend/tests/integration/: conftest.py  test_audit_node.py  test_backfill_stale_runs.py  test_budget_tracker.py  test_db.py  test_deepagent_node.py  test_documents_api.py  test_documents_orm.py  test_events_publish.py  test_fetch_url_tool.py  test_framing_node.py  test_full_graph.py  test_health_search.py  test_ingest_pipeline.py  test_ma_stub_run.py  test_market_entry_v16_smoke.py  test_per_stage_reviewer.py  test_ping.py  test_pricing_run.py  test_pricing_v16_smoke.py  test_profitability_run.py  test_profitability_v16_smoke.py  test_rag_search.py  test_rag_search_tool.py  test_read_doc_tool.py  test_reviewer_node.py  test_run_lifecycle.py  test_run_lifecycle_columns.py  test_run_recovery.py  test_run_timeout.py  test_run_worker_full.py  test_runs_evidence_endpoint.py  test_runs_models.py  test_scripted_model_guard.py  test_settings_api.py  test_settings_kv.py  test_settings_service.py  test_sse_stream.py  test_stage_node.py  test_stage_node_react.py  (+5 more)
backend/tests/unit/: test_chunker.py  test_cite.py  test_crypto.py  test_docling_parser.py  test_engine_graph_shape.py  test_engine_nodes_shim.py  test_engine_profile.py  test_engine_state.py  test_exa_provider.py  test_graph_skeleton.py  test_llm_registry.py  test_market_entry_profile.py  test_path_normalization.py  test_per_stage_max_retries.py  test_perplexity_provider.py  test_pricing.py  test_pricing_profile.py  test_profile_extensions.py  test_profitability_profile.py  test_prompts_loader.py  test_rag_search.py  test_retry_resume_helpers.py  test_run_dispatch.py  test_run_worker_budget.py  test_search_provider_base.py  test_settings_v16.py  test_skill_loader.py  test_task_registry.py  test_task_registry_run_keys.py  test_tavily_provider.py  test_v16_skill_packs.py
(+164 files in other folders)
