[project]
name = "consulting-research-agent-backend"
version = "0.1.0"
description = "Backend for the Consulting Research Agent"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "cryptography>=43",
    "langchain-core>=1.3.2",
    "langchain-anthropic>=1.4.1",
    "langchain-openai>=1.2.1",
    "langchain-google-genai>=4.2.2",
    "langchain-aws>=1.4.5",
    "langchain-ollama>=1.1.0",
    "pgvector>=0.4.2",
    "python-multipart>=0.0.26",
    "docling>=2.91.0",
    "tiktoken>=0.12.0",
    "langgraph>=1.1.9",
    "langgraph-checkpoint-postgres>=3.0.5",
    "deepagents>=0.5.3",
    "readability-lxml>=0.8.4.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "httpx>=0.27",
    "ruff>=0.7",
    "mypy>=1.13",
    "pre-commit>=4.0",
    "numpy>=2.4.4",
    "respx>=0.23.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
# All async tests share a single event loop so the module-level async
# engine in `app.core.db` (created on whatever loop runs first) stays
# valid across tests. Without this, the second test sees pooled
# connections bound to a closed loop ("Event loop is closed").
asyncio_default_test_loop_scope = "session"
asyncio_default_fixture_loop_scope = "session"
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (e.g. first-run model downloads); deselect with -m 'not slow'",
    "integration: marks tests as integration (requires live external services like Postgres or OpenAI)",
]
